Add get place endpoint and add sort by to the search endpoint
